[package]
name = "bipe"
version = "0.1.2-alpha.0"
edition = "2018"
description="asynchronous I/O pipe"
license="ISC"
repository="https://github.com/geph-official/bipe"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "2.5.1"
futures-core = "0.3.16"
futures-lite = "1.12.0"
rtrb = "0.1.4"

[dev-dependencies]
async-global-executor="1"
